code adjustments, adding swagger docs and fixing code warnings
