# internal/models/generic_models.go
@@ -1,6 +1,14 @@
 package models
 
-// ErrorMessage is a generic error message returned by a server
+// Error Response
+// swagger:response errorMessage
+type _ struct {
+	// in:body
+	Body ErrorMessage
+}
+
 type ErrorMessage struct {
+	// Error message string
+	// Example: error message
 	Message string `json:"message"`
 }
