# microservices/authentication/handlers/auth_handlers.go
@@ -16,6 +16,7 @@ import (
 	"golang.org/x/oauth2"
 )
 
+// Interface for Authentication handlers
 type Auth struct {
 	PgConn          *db.PostgresDriver
 	Log             *logrus.Logger
@@ -28,17 +29,22 @@ const (
 	rUrl = "https://github.com/login/oauth/authorize?scope=user&client_id=%s&redirect_uri=%s"
 )
 
+// NewAuth returns initialized Auth handler struct
 func NewAuth(pg *db.PostgresDriver, log *logrus.Logger, oConf *oauth2.Config, redirectUrl string, gitCollabSecret string) *Auth {
 	return &Auth{pg, log, oConf, redirectUrl, gitCollabSecret}
 }
+
+// NOTE: improve the error return for user for these handlers by using ErrorMessage struct.
+// See examples in profiles handlers.
 
 // GithubRedirectHandler get the redirect url for github, when login button is
 // clicked, this will be returned to the frontend.
 func (a *Auth) GithubRedirectHandler(w http.ResponseWriter, r *http.Request) {
 	redirect := fmt.Sprintf(rUrl, a.oauth.ClientID, a.gitRedirectUrl)
-	err := jsonio.ToJSON(&authModels.GitHubRedirectResponse{RedirectUrl: redirect}, w)
+	err := jsonio.ToJSON(&authModels.GitHubRedirectResp{RedirectUrl: redirect}, w)
 	if err != nil {
 		a.Log.Panicf("Failed to create redirect response: %s", err.Error())
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 }
 
@@ -48,9 +54,8 @@ func (a *Auth) GithubRedirectHandler(w http.ResponseWriter, r *http.Request) {
 func (a *Auth) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	// TODO: If user does not exist in DB, should create jwt and bring to new user flow.
 	a.Log.Info("Serving login request")
-	var githubCodeRes authModels.GitOauthRequest
+	var githubCodeRes authModels.GitHubOauthReq
 	err := jsonio.FromJSON(&githubCodeRes, r.Body)
-
 	if err != nil {
 		a.Log.Errorf("Request missing code: %s", err.Error())
 		http.Error(w, err.Error(), http.StatusBadRequest)
@@ -85,7 +90,7 @@ func (a *Auth) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	tokenString, err := jwt.CreateGitCollabJwt(*username.Login, *username.ID, a.gitCollabSecret)
 	if err != nil {
 		a.Log.Errorf("Faild to create a new jwt: %s", err.Error())
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
@@ -119,14 +124,14 @@ func (a *Auth) LoginHandler(w http.ResponseWriter, r *http.Request) {
 	}
 
 	isNewUser := userInfo == nil
-	err = jsonio.ToJSON(&authModels.LoginResponse{Token: tokenString, NewUser: isNewUser}, w)
+	err = jsonio.ToJSON(&authModels.LoginResp{Token: tokenString, NewUser: isNewUser}, w)
 	if err != nil {
 		a.Log.Fatalf("failed to serve jwt to frontend: %s", err.Error())
 	}
 }
 
 // LogoutHandler adds jwt to the blacklist, these will be picked up by the blacklist
-// middleware and refuse access if found
+// middleware and refuse access if found.
 func (a *Auth) LogoutHandler(w http.ResponseWriter, r *http.Request) {
 	jwtString := jwt.GetJwtFromHeader(r)
 	if jwtString == "" {
